fix go back on mobile

--- a/components/section/Section.module.css
+++ b/components/section/Section.module.css
@@ -28,29 +28,6 @@
 	width: 100%;
 }
 
-.back {
-	position: absolute;
-	right: 0;
-	bottom: -36px;
-	display: flex;
-	align-items: center;
-	gap: 12px;
-	font-size: 14px;
-	color: #666;
-	justify-content: end;
-	cursor: pointer;
-	transition: all 0.25s ease-in-out;
-}
-
-.back:hover {
-	color: var(--primary);
-}
-
-.back i {
-	font-size: 24px;
-	margin-top: 2px;
-}
-
 @media screen and (max-width: 579px) {
 	.subtitle {
 		font-size: 16px;
